Added section headers

--- a/index.html
+++ b/index.html
@@ -9,10 +9,17 @@
         <meta name="author" content="tøfu">
 
         <!-- <link rel="icon" href="/favicon.ico"> -->
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Eat my ass</h1>
-        <p>Hello world</p>
+        <content>
+            tofu.earth
+        </content>
+        <content>
+            music
+        </content>
+        <content>
+            videos
+        </content>
     </body>
 </html>
