Added music links

--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
     </head>
     <body>
         <content>
-            tofu.earth
+            <h1>tofu.earth</h1>
         </content>
         <content>
-            music
+            <h1>music</h1>
+            <ul>
+                <li>soundcloud | alternative</li>
+                <li>spotify</li>
+                <li>bandcamp</li>
+            </ul>
         </content>
         <content>
-            videos
+            <h1>videos</h1>
         </content>
     </body>
 </html>
