Added hyperlinks to music links

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <content>
             <h1>music</h1>
             <ul>
-                <li>soundcloud | alternative</li>
-                <li>spotify</li>
-                <li>bandcamp</li>
+                <li><a href="https://soundcloud.com/bongsquadtofu">soundcloud</a><a> | </a><a href="https://soundcloud.com/steamedtofu">alternative</a></li>
+                <li><a href="https://open.spotify.com/artist/609XhRcu9Ad613ofgkumqC?si=_EUMIkZsRVuLqmG8hg-GAw">spotify</a></li>
+                <!-- <li>bandcamp</li> -->
             </ul>
         </content>
         <content>
