Added video links

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         </content>
         <content>
             <h1>videos</h1>
+            <ul>
+                <li><a href="www.tiktok.com/@uwuimtofu">tiktok</a></li>
+                <li><a href="http://twitch.tv/uwuimtofu">twitch</a></li>
+                <li><a href="https://youtu.be/2g5vFcZ_qYA">youtube</a></li>
+            </ul>
         </content>
     </body>
 </html>
