Added more angels

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <content>
-            <h1>tofu.earth</h1>
+            <h1>tøfu.earth</h1>
         </content>
         <content>
             <h1>music</h1>
@@ -29,6 +29,15 @@
                 <li><a href="www.tiktok.com/@uwuimtofu">tiktok</a></li>
                 <li><a href="http://twitch.tv/uwuimtofu">twitch</a></li>
                 <li><a href="https://youtu.be/2g5vFcZ_qYA">youtube</a></li>
+            </ul>
+        </content>
+        <content>
+            <h1>tøfu's angels</h1>
+            <ul>
+                <li><a href="https://github.com/Edward-Boguslavsky">e.b // designer</a></li>
+                <li><a href="">nitro // co-producer</a></li>
+                <li><a href="">kxly // co-sound designer</a></li>
+                <li><a href="">joyora // prod tag</a></li>
             </ul>
         </content>
     </body>
