Gave links to angels

--- a/index.html
+++ b/index.html
@@ -35,9 +35,10 @@
             <h1>tøfu's angels</h1>
             <ul>
                 <li><a href="https://github.com/Edward-Boguslavsky">e.b // designer</a></li>
-                <li><a href="">nitro // co-producer</a></li>
-                <li><a href="">kxly // co-sound designer</a></li>
-                <li><a href="">joyora // prod tag</a></li>
+                <li><a href="https://soundcloud.com/ntrbeats">nitro // co-producer</a></li>
+                <li><a href="https://soundcloud.com/kxly/tracks">kxly // co-sound designer</a></li>
+                <li><a href="linktr.ee/JOYORA">joyora // prod tag</a></li>
+                <li><a href="https://instagram.com/selfishbastardsto?utm_medium=copy_link">selfishbastards // visual artist</a></li>
             </ul>
         </content>
     </body>
